--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -11,7 +11,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "# load data\n",
+    "data = pd.read_csv('data/ratings.csv', header=0, usecols=[0, 1, 2])\n",
+    "print(data.head())\n",
+    "R = data.pivot_table(index='userId', columns='movieId', values='rating', fill_value=0).values\n",
+    "\n",
+    "print(\"(number of users, number of rated movies): \", R.shape)"
    ]
   }
  ],
