--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -19,7 +19,7 @@
     "numpy v1.14.0  \n",
     "scikit-learn v0.19.1  \n",
     "scipy v1.0.0  \n",
-    "matplotlib v2.1.2\n",
+    "matplotlib v2.1.2  \n",
     "pandas v0.22.0"
    ]
   },
@@ -50,7 +50,8 @@
     "# load data\n",
     "r_data = pd.read_csv('data/ratings.csv', header=0, usecols=[0, 1, 2])\n",
     "print(r_data.head())\n",
-    "R = r_data.pivot_table(index='userId', columns='movieId', values='rating', fill_value=0).values\n",
+    "R = r_data.pivot_table(index='userId', columns='movieId', \n",
+    "                       values='rating', fill_value=0).values\n",
     "print(\"(number of users, number of rated movies): \", R.shape)\n"
    ]
   },
@@ -236,6 +237,32 @@
     "ax.set_xlabel(\"rating variance\")\n",
     "ax.set_ylabel(\"movie count\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$I_u$ : Set of item indices for which ratings have been specifed by user $u$  \n",
+    "$I_v$ : Set of item indices for which ratings have been specifed by user $v$  \n",
+    "$\\mu_u$ : Mean rating for user $u$ computed using her specifed ratings  \n",
+    "$r_{uk}$ : Rating of user $u$ for item $k$  \n",
+    "\n",
+    "$$\\mu_u = \\frac{\\Sigma_{i\\in I_{u}} r_{ui}}{\\mid I_u \\mid}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 8"
    ]
   },
   {
