--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "user_count = R.shape[0]\n",
     "movie_count = R.shape[1]\n",
     "max_rating_count = user_count*movie_count\n",
-    "rating_count = r_data.size/3\n",
+    "rating_count = len(r_data.rating.tolist())\n",
     "sparsity = rating_count*1.0/max_rating_count\n",
     "print(\"Matrix sparsity = %0.4f\" % sparsity)"
    ]
@@ -263,6 +263,13 @@
    "metadata": {},
    "source": [
     "#### Question 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$I_{u} \\cap I_{v}$ represents the indices of movies that are rated by both user $u$ and user $v$. It's possible that this intersection be the empty set ($\\emptyset$), given the sparsity of the matrix. It happens when user $u$ has not rated any movie that user $v$ has."
    ]
   },
   {
