--- a/Project3_copy.ipynb
+++ b/Project3_copy.ipynb
@@ -9,7 +9,7 @@
     "### Team members:\n",
     "* **Yin Fei** 404284074\n",
     "\n",
-    "* **Yichen Wu** 504294181 *wyc20020111@ucla.edu*\n",
+    "* **Yichen Wu** 504294181\n",
     "\n",
     "* **Siyuan Chen** 405024391\n",
     "\n",
@@ -20,9 +20,8 @@
     "scikit-learn v0.19.1  \n",
     "scipy v1.0.0  \n",
     "matplotlib v2.1.2  \n",
-    "pandas v0.22.0 \n",
-    "\n",
-    "surprise"
+    "pandas v0.22.0   \n",
+    "surprise v0.1"
    ]
   },
   {
@@ -299,6 +298,41 @@
    "metadata": {},
    "source": [
     "#### Question 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import surprise\n",
+    "from surprise import Dataset\n",
+    "from surprise.model_selection import cross_validate\n",
+    "data = Dataset.load_builtin('ml-100k')\n",
+    "\n",
+    "k_lst = range(2,101,2)\n",
+    "\n",
+    "sim_options = {'name': 'pearson'}\n",
+    "rmse_lst=[]\n",
+    "mae_lst=[]\n",
+    "\n",
+    "if GET_DATA_FROM_FILES and os.path.isfile(\"./rmse_lst.pkl\")\\\n",
+    "                    and os.path.isfile(\"./mae_lst.pkl\"):\n",
+    "    logging.info(\"Loading rmse_lst and mae_lst.\")\n",
+    "    rmse_lst = pickle.load(open(\"./rmse_lst.pkl\", \"rb\"))\n",
+    "    mae_lst = pickle.load(open(\"./mae_lst.pkl\", \"rb\"))\n",
+    "else:\n",
+    "    for k in k_lst:\n",
+    "        algo = surprise.prediction_algorithms.knns.KNNWithMeans(k=k, sim_options=sim_options)\n",
+    "        result=cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=10)\n",
+    "        rmse_lst.append(np.mean(result['test_rmse']))\n",
+    "        mae_lst.append(np.mean(result['test_mae']))\n",
+    "    \n",
+    "    pickle.dump(rmse_lst, open(\"./rmse_lst.pkl\", \"wb\"))    \n",
+    "    pickle.dump(mae_lst, open(\"./mae_lst.pkl\", \"wb\"))"
    ]
   },
   {
