--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -21,7 +21,8 @@
     "scipy v1.0.0  \n",
     "matplotlib v2.1.2  \n",
     "pandas v0.22.0   \n",
-    "surprise v0.1"
+    "surprise v0.1  \n",
+    "scikit-surprise v1.0.5  \n"
    ]
   },
   {
