--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -1506,7 +1506,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from surprise import AlgoBase\n",
@@ -1542,7 +1544,7 @@
     "algo = Naive()\n",
     "algo.fit(trainset)\n",
     "\n",
-    "result = cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=10)"
+    "result = cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=10, n_jobs=1)"
    ]
   },
   {
@@ -1670,7 +1672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
