--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -685,6 +685,37 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\min\\limits_{V}\n",
+    "\\left\\Vert W\\otimes \\left(\\begin{bmatrix} u_0 & 0 & \\cdots & 0\\\\\n",
+    "                        0 & u_0 & \\cdots & 0\\\\\n",
+    "                        0 & 0 & \\ddots & 0\\\\\n",
+    "                        0 & \\cdots & 0 & u_0 \\\\\n",
+    "                        u_1 & 0 & \\cdots & 0\\\\\n",
+    "                        0 & u_1 & \\cdots & 0\\\\\n",
+    "                        0 & 0 & \\ddots & 0\\\\\n",
+    "                        0 & \\cdots & 0 & u_1 \\\\\n",
+    "                        \\vdots & \\vdots & \\vdots & \\vdots\\\\\n",
+    "                        u_n & 0 & \\cdots & 0\\\\\n",
+    "                        0 & u_n & \\cdots & 0\\\\\n",
+    "                        0 & 0 & \\ddots & 0\\\\\n",
+    "                        0 & \\cdots & 0 & u_n \\end{bmatrix}V-R\\right)\\right\\Vert^2\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $\\otimes$ is an elementwise filter, and $R$ is $r_{ui}$ reshaped into a vector by rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
