--- a/Project3_with_report.ipynb
+++ b/Project3_with_report.ipynb
@@ -708,24 +708,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The optimization problem given by equation 5 can be shown to be convex by calculating the Hessian Matrix.\n",
+    "Since the Hessian Matrix is positive semi-definite, the optimization problem is convex.\n",
+    "\n",
+    "Equation 5 formulated as a least-squares problem:\n",
+    "\n",
     "\\begin{equation}\n",
     "\\min\\limits_{V}\n",
-    "\\left\\Vert W\\otimes \\left(\\begin{bmatrix} u_0 & 0 & \\cdots & 0\\\\\n",
-    "                        0 & u_0 & \\cdots & 0\\\\\n",
-    "                        0 & 0 & \\ddots & 0\\\\\n",
-    "                        0 & \\cdots & 0 & u_0 \\\\\n",
-    "                        u_1 & 0 & \\cdots & 0\\\\\n",
-    "                        0 & u_1 & \\cdots & 0\\\\\n",
-    "                        0 & 0 & \\ddots & 0\\\\\n",
-    "                        0 & \\cdots & 0 & u_1 \\\\\n",
-    "                        \\vdots & \\vdots & \\vdots & \\vdots\\\\\n",
-    "                        u_n & 0 & \\cdots & 0\\\\\n",
-    "                        0 & u_n & \\cdots & 0\\\\\n",
-    "                        0 & 0 & \\ddots & 0\\\\\n",
-    "                        0 & \\cdots & 0 & u_n \\end{bmatrix}V-R\\right)\\right\\Vert^2\n",
+    "\\left\\Vert W\\otimes \\left(VU^T-R^T\\right)\\right\\Vert^2\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\otimes$ is an elementwise filter, and $R$ is $r_{ui}$ reshaped into a vector by rows"
+    "where $\\otimes$ is an elementwise filter, $U$ is fixed, and $R$ is the rating matrix"
    ]
   },
   {
